XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* Bug fix: exception is case when files in a project directory are created
  and deleted very quickly
* Fix for pylint 1.2.1
* GC plugin: mimic standard GC procedure
* Fix: 'remove all ignored exception types' did not clear the list in memory
* New feature: saving profiling results table in a CSV file
* F12: make the cursor line the first on the screen
* Get rid of QString, use python strings instead

2014 May 06 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.3.1
* New feature: navigation bar
* Bug fix: mouse click in the editor led to a sporadic crash
* New feature: implementation of a context menu for the redirected IO console
  including copying everything with timestamps
* Main toolbar could be hidden/shown via a setting

2014 Mar 11 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.3.0
* New feature: debugging and running script now can have IO redirected to IDE
* New feature: allow selecting multiple files in the 'Open file' dialog
* New feature: display the number of highlighted occurences on the status bar
* Bug fix: crash when 'Edit' main menu is opened on the startup screen
* New feature: detect TAB TAB clicks after a character and add spaces if
  there is no completion
* Better pylint messages parser: collects positions in line if available and
  jumps to the certain column if so
* Bug fix: opening recent project from the project main menu lead to crash if
  the project does not exist anymore
* New feature: custom garbage collector which runs in the GUI thread
* Get rid of checking if a new version is available when IDE starts

2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.2
* Bug fix: wrong brutal stop of a debug session on Fedora
* Bug fix: side bars must not be expanded via clicking on disabled tabs
* Improvement: get rid of serialization/deserialization of the python files
  parser info cache